# PFE-v2

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run_windows.bat  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml
api/: __init__.py  app.py  db.py  jobs.py  schemas.py  serializers.py
design/: README.md  colors_and_type.css  tokens.md
design/preview/: ConfigTab.jsx  Dashboard.jsx  MarketDataTab.jsx  PortfolioTab.jsx  README.md  ResultsTab.jsx  Sidebar.jsx  StepTabs.jsx  index.html  styles.css
design/spec/: 01-surfaces.html  02-text-ramp.html  03-semantic-colors.html  04-trade-colorway.html  05-fan-bands.html  06-typefaces.html  07-type-scale.html  08-radii-elevation.html  09-kpi-cards.html  10-buttons.html  11-inputs.html  12-tags-badges.html  13-icons.html  14-unicode-glyphs.html  15-logo.html  16-tabs.html  17-sidebar-rows.html  18-chart-pfe-epe.html  19-mtm-table.html  20-grouped-sections.html  21-scrollbar.html  22-voice.html  _base.css  index.html
docs/: Windows_Setup_Guide.docx  product-catalog.md
docs/assets/: make_pfe_profile.py
docs/plans/: 2026-04-15-product-catalog-restructure.md  2026-04-15-ui-term-sheet.md
docs/specs/: 2026-04-15-product-catalog-restructure-design.md  2026-04-15-ui-term-sheet-design.md
docs/superpowers/specs/: 2026-05-22-portfolio-tab-redesign-design.md
examples/: README.md  basic_pfe.py  fx_accumulator.py  multi_asset_worst_of.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  plotly.d.ts
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ConfigTab.tsx  MarketTab.tsx  PfeChart.tsx  PortfolioTab.tsx  ResultsTab.tsx  Sidebar.tsx  StepTabs.tsx  TradeForm.tsx  inputs.tsx
frontend/src/styles/: app.css  tokens.css
pfev2/: __init__.py
pfev2/core/: __init__.py  exceptions.py  protocols.py  types.py
pfev2/engine/: cholesky.py  gbm.py
pfev2/engine/backends/: __init__.py  numba_backend.py  numpy_backend.py
pfev2/instruments/: __init__.py  accumulator.py  asian.py  autocallable.py  barrier.py  base.py  cliquet.py  contingent.py  digital.py  dispersion.py  forward_starting.py  range_accrual.py  restrike.py  single_barrier.py  tarf.py  vanilla.py  worst_best_of.py
pfev2/modifiers/: __init__.py  base.py  cap_floor.py  knock_in.py  knock_out.py  leverage.py  realized_vol_knock.py  schedule.py  target_profit.py
pfev2/pricing/: __init__.py  inner_mc.py
pfev2/risk/: __init__.py  pfe.py  result.py
pfev2/utils/: __init__.py  parallel.py  seeds.py
tests/: conftest.py
tests/test_api/: test_endpoints.py
tests/test_core/: test_exceptions.py  test_types.py
tests/test_engine/: test_cholesky.py  test_determinism.py  test_gbm.py  test_numba_backend.py  test_numpy_backend.py
tests/test_instruments/: test_accumulator.py  test_asian.py  test_autocallable.py  test_barrier.py  test_cliquet.py  test_contingent.py  test_digital.py  test_dispersion.py  test_forward_starting.py  test_range_accrual.py  test_restrike.py  test_single_barrier.py  test_tarf.py  test_vanilla.py  test_worst_best_of.py
tests/test_modifiers/: test_cap_floor.py  test_composition.py  test_knock_in.py  test_knock_out.py  test_leverage.py  test_observation_styles.py  test_passthrough.py  test_realized_vol_knock.py  test_schedule.py  test_target_profit.py
tests/test_packaging/: test_streamlit_cloud_metadata.py
tests/test_pricing/: test_inner_mc.py  test_payment_time_discounting.py  test_portfolio.py
tests/test_project/: test_packaging.py
tests/test_risk/: test_margined.py  test_pfe.py  test_regression.py  test_result.py
tests/test_ui/: test_converters.py  test_dashboard_results.py  test_formatting.py  test_layout.py  test_navigation.py  test_payoff_display.py  test_portfolio_app_flow.py  test_portfolio_table.py  test_product_content.py  test_registry.py  test_result_time_axis.py  test_session.py  test_snapshots.py  test_t0_mtm.py  test_term_sheet.py  test_theme.py  test_trade_economics.py
tests/test_utils/: test_seeds.py
ui/: app.py  theme.py
ui/components/: __init__.py  config_panel.py  correlation_matrix.py  dashboard_view.py  market_data_input.py  payoff_display.py  portfolio_table.py  results_viewer.py  term_sheet.py  trade_builder.py  trade_economics.py
ui/utils/: converters.py  formatting.py  navigation.py  presets.py  product_content.py  registry.py  runner.py  session.py  session_keys.py  snapshots.py  t0_mtm.py
ui/utils/registries/: __init__.py  european.py  modifiers.py  multi_asset.py  path_dependent.py  periodic.py
